<resources>
    <string name="app_name">惠服务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomePager_id">首页</string>
    <string name="Verification_id">输入验证码</string>
    <string name="Verification_Ru">获取验证码</string>
    <string name="back_id">返回</string>
    <string name="skip_id">跳过5</string>
    <string name="Wecome_id">欢迎登录惠服务</string>
    <string name="tel_id">请输入手机号</string>
    <string name="password_id">请输入密码</string>
    <string name="newUSer_id">新用户注册</string>
    <string name="wpasw_id">忘记密码</string>
    <string name="login_id">立即登录</string>
    <string name="outlogin_id">退出登录</string>
    <string name="photo_empt">手机号不能为空</string>
    <string name="Wrongful">手机号不符合格式请重新输入</string>
    <string name="code_id">获取验证码</string>
    <string name="id_86">+86</string>
    <string name="repeat">重新获取</string>
    <string name="send_success">验证码已发送至</string>
    <string name="Resign_id">欢迎注册惠服务</string>
    <string name="w2PassWord_id">忘记密码？</string>
    <string name="accton_id">请输入你要找回密码的账号</string>
    <string name="next_id">下一步</string>
    <string name="password_one">请设置登录密码</string>
    <string name="alding_id">《阿拉丁服务协议》</string>
    <string name="agree_id">我已经阅读并同意</string>
    <string name="input_password">请输入密码</string>
    <string name="password_guifan">对不起，您输入密码不规范，密码必须包含大小写，不能少于六位，不能多于十六位</string>
    <string name="repeat_password">请重新设置密码</string>
    <string name="sure_id">确定</string>
    <string name="setup_id">请设置密码</string>
    <string name="Service_hui">惠服务</string>
    <string name="sodexho_id">索迪斯</string>
    <string name="my_id">我的</string>
    <string name="man_id">男</string>
    <string name="icon_woman">女</string>
    <string name="information_id">完善资料</string>
    <string name="grandfather">爷爷</string>
    <string name="framily_sex">家庭角色</string>
    <string name="place_chosse">请选择</string>
    <string name="tell_id">服务地址</string>
    <string name="contact_id">联系人</string>
    <string name="name_id">请输入姓名</string>
    <string name="number_id">手机号</string>
    <string name="contact_number">将通过此号码联系您</string>
    <string name="Service_tel">服务地址</string>
    <string name="tel_xx">详细地址：如2号楼一单元301室</string>
    <string name="chosse_crde">选择卡片</string>
    <string name="Service_crde">点击选择你需要的服务类型卡片</string>
    <string name="Service_crdeCourse">定制您的专属服务体验</string>
    <string name="cancl_id">取消</string>
    <string name="chosse">选择</string>
    <string name="evaluate_id">我的评价</string>
    <string name="waitmoney_id">待支付</string>
    <string name="waitteam_id">待成团</string>
    <string name="waitService_id">待服务</string>
    <string name="coffee_id">服务中</string>
    <string name="success_id">完成</string>
    <string name="integral_id">我的积分</string>
    <string name="demand_id">发布服务需求</string>
    <string name="name_Relation">关联账号</string>
    <string name="choose_crde">选择卡片</string>
    <string name="every_">所有的</string>
    <string name="new_tel">新增地址</string>
    <string name="changepw_id">修改密码</string>
    <string name="moren_tel">默认地址</string>
    <string name="del_tel">删除</string>
    <string name="change_id">编辑</string>
    <string name="tel_tel">上海市 加州水郡5号楼2单元302</string>
    <string name="name_ids">马天宇</string>
    <string name="telphone_id">15801693719</string>
    <string name="cream_id">拍照</string>
    <string name="photo_id">相册</string>
    <string name="langer">语言</string>
    <string name="problem_id">常见问题</string>
    <string name="Opinion_id">意见反馈</string>
    <string name="my_gy">关于我们</string>
    <string name="Canth">清理缓存</string>
    <string name="setting">设置</string>
    <string name="my_tel">我的地址</string>
    <string name="newtel_add">新增地址</string>
    <string name="name_idid">马天宇</string>
    <string name="chinese">简体中文</string>
    <string name="icon_idd">头像</string>
    <string name="name_nc">昵称</string>
    <string name="sex_nn">性别</string>
    <string name="geren_id">个人资料</string>
    <string name="down_id">保存</string>
    <string name="my_dd_id">我的订单</string>
    <string name="every_dd_id">全部订单</string>
    <string name="iphone_id">15801693719</string>
    <string name="choosecountry">选择国家或地区</string>
    <string name="lager_chinses">语言</string>
    <string name="add_newtel">新增地址</string>
    <string name="chooseService">选择服务时间</string>
    <string name="commint_mission">提交订单</string>
    <string name="search_tel">搜索地址</string>
    <string name="SH_city">上海市</string>

</resources>
