<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="80dp">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/d25"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/tel_tel"
                android:textSize="@dimen/f14"
                android:textColor="@color/black_shou"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/name_ids"
                android:id="@+id/tel_name"
                android:textSize="@dimen/f14"
                android:textColor="@color/black_shou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/telphone_id"
                android:layout_marginLeft="@dimen/d70"
                android:textSize="@dimen/f14"
                android:textColor="@color/black_shou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_toLeftOf="@+id/changer"
                android:src="@mipmap/change"
                android:layout_marginRight="@dimen/d5"
                android:layout_width="@dimen/d15"
                android:layout_height="@dimen/d15" />

            <TextView
                android:id="@+id/changer"

                android:text="@string/change_id"
                android:textColor="@color/black_shou"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/d25"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>